# systeroid

./: .dockerignore  .editorconfig  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  RELEASE.md  bors.toml  cliff.toml  cobertura.xml  codecov.yml  deny.toml  release.toml
.cargo/: audit.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/fixtures/: check_vars.sh  sysctl.conf  test.sh
.github/workflows/: cd.yml  ci.yml  docker.yml
.github/workflows/ci.yml/: ci.yml
config/: systeroid.conf
kparams/: Cargo.toml
kparams-core/: Cargo.toml
kparams-core/src/: error.rs  kernel.rs  lib.rs
kparams-parser/: Cargo.toml
kparams-parser/src/: kernel.rs  lib.rs  parser.rs  reader.rs  title.rs
kparams/src/: lib.rs  main.rs
man/: systeroid.8
man8/: systeroid-tui.8  systeroid.8
parseit/: Cargo.toml  README.md
parseit/examples/: parse_manifest.rs
parseit/src/: document.rs  lib.rs  parser.rs  reader.rs
parseit/tests/: integration_test.rs
scripts/: clone-linux-docs.sh  release.sh  update_parser.sh
src/: kernel.rs  lib.rs  main.rs  parser.rs  reader.rs  rst.pest
systeroid/: Cargo.toml
systeroid-core/: Cargo.toml
systeroid-core/src/: cache.rs  config.rs  display.rs  docs.rs  error.rs  kernel.rs  lib.rs  parsers.rs  sysctl.rs  tree.rs
systeroid-core/src/sysctl/: controller.rs  display.rs  mod.rs  parameter.rs  section.rs  type.rs
systeroid-parser/: Cargo.toml
systeroid-parser/examples/: parse_manifest.rs
systeroid-parser/src/: document.rs  error.rs  lib.rs  parser.rs  reader.rs  rst.pest  title.rs
systeroid-parser/tests/: integration_test.rs
systeroid-tui/: Cargo.toml
systeroid-tui/src/: app.rs  args.rs  color.rs  command.rs  error.rs  event.rs  lib.rs  main.rs  options.rs  style.rs  ui.rs  widgets.rs
systeroid-tui/tests/: integration_test.rs
systeroid-tui/tests/snapshots/: integration_test__about.snap  integration_test__copy.snap  integration_test__copy_not_enabled.snap  integration_test__default.snap  integration_test__documentation.snap  integration_test__input.snap  integration_test__list.snap  integration_test__process_input.snap  integration_test__refreshed.snap  integration_test__search.snap  integration_test__set.snap
systeroid/src/: app.rs  args.rs  lib.rs  main.rs  output.rs
systeroid/tests/: live_test.rs
