[workspace]
members = ["systeroid-core", "systeroid-tui", "systeroid"]

[workspace.dependencies]
parseit = { version = "0.1.2", features = ["gzip"] }

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
