[package]
name = "systeroid-core"
version = "0.4.4" # managed by release.sh
description = "Core library of systeroid"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/orhun/systeroid"
repository = "https://github.com/orhun/systeroid"
keywords = ["linux", "kernel", "parameter", "sysctl"]
edition = "2021"
rust-version = "1.64.0"

[dependencies]
parseit.workspace = true
log.workspace = true
sysctl = "0.6.0"
thiserror = "1.0.49"
lazy_static = "1.5.0"
rayon = "1.10.0"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
dirs-next = "2.0.0"
rust-ini = "0.21.0"
