[package]
name = "systeroid-core"
version = "0.4.5" # managed by release.sh
description = "Core library of systeroid"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/orhun/systeroid"
repository = "https://github.com/orhun/systeroid"
keywords = ["linux", "kernel", "parameter", "sysctl"]
edition = "2021"
rust-version = "1.73.0"

[dependencies]
parseit.workspace = true
log.workspace = true
thiserror.workspace = true
sysctl = "0.6.0"
lazy_static = "1.5.0"
rayon = "1.10.0"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
dirs-next = "2.0.0"
rust-ini = "0.21.2"
