[package]
name = "systeroid-tui"
version = "0.4.3" # managed by release.sh
description = "A terminal user interface for managing kernel parameters"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/orhun/systeroid"
repository = "https://github.com/orhun/systeroid"
keywords = ["linux", "kernel", "parameter", "sysctl", "tui"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.68.2"

[features]
# clipboard support is enabled as default
default = ["clipboard"]
clipboard = ["copypasta-ext"]

[dependencies]
termion = "2.0.1"
unicode-width = "0.1.10"
thiserror = "1.0.48"
getopts = "0.2.21"
copypasta-ext = { version = "0.4.4", optional = true }
log.workspace = true

[dependencies.systeroid-core]
version = "0.4.3" # managed by release.sh
path = "../systeroid-core"

[dependencies.ratatui]
version = "=0.23.0"
default-features = false
features = ["termion"]

[dependencies.tui-logger]
version = "0.9.5"
default-features = false
features = ["ratatui-support"]

# metadata for cargo-binstall to get the right artifacts
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/systeroid-{ version }-{ target }.{ archive-format }"
bin-dir = "systeroid-{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
