[package]
name = "systeroid"
version = "0.1.0"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
repository = "https://github.com/orhun/systeroid"
license = "MIT OR Apache-2.0"
edition = "2021"
default-run="systeroid"

[features]
# tests that affect the system state
live-tests = []

[dependencies]
getopts = "0.2.21"

[dependencies.parseit]
version = "0.1.0"
path = "../parseit"

[dependencies.systeroid-core]
version = "0.1.0"
path = "../systeroid-core"
